working with the player stat visualization

--- a/templates/player_templates/player_pass_types.html
+++ b/templates/player_templates/player_pass_types.html
@@ -4,8 +4,10 @@
 
 {% block content %}
     <h1>Pass Types Stats</h1>
-    <table>
-        <!-- Assuming `dataframe` is passed from the Flask view function -->
-        {{ dataframe|safe }}
-    </table>
+    <div class="table-wrapper">
+        <table>
+            <!-- Assuming `dataframe` is passed from the Flask view function -->
+            {{ dataframe|safe }}
+        </table>
+    </div>
 {% endblock %}
