--- a/templates/player_templates/player_stat_select.html
+++ b/templates/player_templates/player_stat_select.html
@@ -56,17 +56,17 @@
         <h1>Player Stats</h1>
         <p>Select the category of stats you'd like to access:</p>
         <ul class="button-list">
-            <li><a href="{{ url_for('player_stat', category='stats') }}" class="button">Standard Stats</a></li>
-            <li><a href="{{ url_for('player_stat', category='keepers') }}" class="button">Goalkeeping</a></li>
-            <li><a href="{{ url_for('player_stat', category='keepersadv') }}" class="button">Advanced Goalkeeping</a></li>
-            <li><a href="{{ url_for('player_stat', category='shooting') }}" class="button">Shooting</a></li>
-            <li><a href="{{ url_for('player_stat', category='passing') }}" class="button">Passing</a></li>
-            <li><a href="{{ url_for('player_stat', category='pass_types') }}" class="button">Pass Types</a></li>
-            <li><a href="{{ url_for('player_stat', category='gca') }}" class="button">Goal and Shot Creation</a></li>
-            <li><a href="{{ url_for('player_stat', category='defense') }}" class="button">Defensive Action</a></li>
-            <li><a href="{{ url_for('player_stat', category='possession') }}" class="button">Possession</a></li>
-            <li><a href="{{ url_for('player_stat', category='playingtime') }}" class="button">Playing Time</a></li>
-            <li><a href="{{ url_for('player_stat', category='misc') }}" class="button">Misc. Stats</a></li>       
+            <li><a href="{{ url_for('player_stat', name = 'Standard', category='stats') }}" class="button">Standard</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Goalkeeping', category='keepers') }}" class="button">Goalkeeping</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Advanced Goalkeeping', category='keepersadv') }}" class="button">Advanced Goalkeeping</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Shooting', category='shooting') }}" class="button">Shooting</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Passing', category='passing') }}" class="button">Passing</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Pass Types', category='pass_types') }}" class="button">Pass Types</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Goal and Shot Creation', category='gca') }}" class="button">Goal and Shot Creation</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Defensive Action', category='defense') }}" class="button">Defensive Action</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Possession', category='possession') }}" class="button">Possession</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Playing Time', category='playingtime') }}" class="button">Playing Time</a></li>
+            <li><a href="{{ url_for('player_stat', name = 'Misc.', category='misc') }}" class="button">Misc.</a></li>       
         </ul>
     </div>
 </body>
