--- a/templates/player_templates/player_stats.html
+++ b/templates/player_templates/player_stats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}DataFrame Viewer{% endblock %}</title>
+    <title>{% block title %}{{name}} Stats{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <style>
         body {
@@ -22,15 +22,11 @@
         }
         .table-wrapper-container {
             width: 100%; /* Full width of the container */
-            max-width: 800px; /* Maximum width for the table wrapper */
-            height: 500px; /* Fixed height for the scrollable area */
+            max-width: 100%%; /* Maximum width for the table wrapper */
+            height: 1000px; /* Fixed height for the scrollable area */
             overflow: auto; /* Enables scrolling */
-            padding: 20px; /* Padding inside the container */
             box-sizing: border-box; /* Includes padding in width and height */
             background-color: #fff; /* Optional: background color for better visibility */
-            border: 1px solid #ddd; /* Optional: border to define the area */
-            border-radius: 8px; /* Optional: rounded corners */
-            margin-bottom: 20px; /* Space below the table wrapper */
             margin-top: 20px; /* Space above the table wrapper */
         }
         table {
@@ -52,6 +48,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>{{name}} Stats</h1>
         {% block content %}
         <div class="table-wrapper-container">
             <table>
