--- a/templates/player_templates/player_stats.html
+++ b/templates/player_templates/player_stats.html
@@ -51,10 +51,7 @@
         <h1>{{name}} Stats</h1>
         {% block content %}
         <div class="table-wrapper-container">
-            <table>
-                <!-- Table content goes here -->
-                {{ dataframe|safe }}
-            </table>
+            {% include 'table_name'%}
         </div>
         {% endblock %}
     </div>
