standardizing cache names and building the cache

--- a/templates/player_templates/player_stats.html
+++ b/templates/player_templates/player_stats.html
@@ -51,7 +51,7 @@
         <h1>{{name}} Stats</h1>
         {% block content %}
         <div class="table-wrapper-container">
-            {% include 'table_name'%}
+            {% include table_name %}
         </div>
         {% endblock %}
     </div>
